--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-remark": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
+    "hyvor-talk-react": "^1.0.3",
     "netlify-cms-app": "2.14.32",
     "node-sass": "^4.14.1",
     "prismjs": "^1.23.0",
